<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro </string>
    <string name="app_name2">Agregar usuario</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nombre: </string>
    <string name="site">Site: </string>
    <string name="direc">Dirección: </string>
    <string name="tel">Telefono: </string>
    <string name="note">Nota: </string>
    <string name="txtGrabar">Grabar</string>

</resources>
