<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Foto"
        android:layout_width="@dimen/tam_img"
        android:layout_height="@dimen/tam_img"
        android:src="@drawable/logo_android"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/Name"
        android:textSize="@dimen/form_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site"/>

    <EditText
        android:id="@+id/Site"
        android:textSize="@dimen/form_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direc"/>

    <EditText
        android:id="@+id/Direccion"
        android:textSize="@dimen/form_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"/>

    <EditText
        android:id="@+id/Phone"
        android:textSize="@dimen/form_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"/>

    <RatingBar
        android:textSize="@dimen/form_font"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/Note" />

    <Button
        android:id="@+id/btnGrabarAlumno"
        android:textSize="@dimen/form_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtGrabar"/>

</LinearLayout>
